--- a/r/r-/r-t/r-tt.com.html
+++ b/r/r-/r-t/r-tt.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the r-tt.com privacy policy that was archived on 2013-11-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131112231030id_/http%3A//www.r-tt.com/Privacy_Policy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the r-tt.com privacy policy that was archived on 2014-02-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140222202927id_/http%3A//www.r-tt.com/Privacy_Policy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" class=" webkit chrome linux js"><head>
  <link rel="stylesheet" href="/includes/style.css" type="text/css" media="screen, projection">
@@ -596,7 +596,15 @@ function onSearchEnter(evt,frm) {
 <li><a href="http://www.r-tt.com/Articles/Data_Recovery_from_Virtual_Machines/">Data Recovery from Virtual Machines</a></li>
 <li><a href="http://www.r-tt.com/Articles/External_Disk_Recovery/">Data Recovery from an External Disk with a Damaged File System</a></li>
 <li><a href="http://www.r-tt.com/Articles/File_Recovery_Basics/">File Recovery Basics</a></li>
-<li><a href="http://www.r-tt.com/Articles/MacOSX_SoftRAID0_Parameters/">Default Parameters of Software Stripe Sets (RAID 0) in Mac OS X</a></li><a id="tr_1vn23x12eb" href="http://www.r-undelete.com/Get_Deleted_Files_Back/">Get Deleted Files Back</a>
+<li><a href="http://www.r-tt.com/Articles/MacOSX_SoftRAID0_Parameters/">Default Parameters of Software Stripe Sets (RAID 0) in Mac OS X</a></li>
+<li><a href="http://www.r-tt.com/Articles/VHD_disk_recovery/">Data Recovery from Virtual Hard Disk (VHD) Files</a></li>
+<li><a href="http://www.r-tt.com/Articles/Data_Recovery_from_File-Containers_and_Encrypted_Disks/">Data Recovery from Various File Container Formats and Encrypted Disks</a></li>
+
+	
+
+	
+	
+<li><a id="tr_1vn23x12eb" href="http://www.r-undelete.com/Get_Deleted_Files_Back/">Get Deleted Files Back</a></li>
 	
 <li><a id="tr_1vn23xcx7k" href="http://www.r-undelete.com/File_Undelete_Articles/Photo_Recovery/">Photo Recovery</a></li>
 
@@ -607,6 +615,7 @@ function onSearchEnter(evt,frm) {
 <li><a id="tr_95vmqq6ol3" href="http://www.r-tt.com/Articles/Computer_Recovery_and_System_Restore/">Computer Recovery and System&nbsp;Restore</a></li>
 <li><a id="tr_95vmqq3jcg" href="http://www.r-tt.com/Articles/Disk_Cloning_and_Mass_System_Deployment/">Disk Cloning and Mass System Deployment</a></li>
 <li><a id="tr_z2v23xfkhc" href="http://www.r-tt.com/Articles/Accessing_Individual_Files_or_Folders_on_a_Backed_Up_Disk_Image/">Accessing Individual Files or Folders on a Backed Up Disk Image</a></li>
+<li><a id="tr_z2v23xfkhc" href="http://www.r-tt.com/Articles/Data_Backup_Plan/">Creating a Data Consistent, Space Efficient Data Backup Plan for a Small Business Server</a></li>
 
 	
 
@@ -651,7 +660,7 @@ function onSearchEnter(evt,frm) {
 </div><!-- #footer -->
 
 <div class="bottom-stripe">
-  © Copyright 2000-2013 <a title="Data Recovery" href="http://www.r-tt.com/">R-Tools Technology Inc.</a>
+  © Copyright 2000-2014 <a title="Data Recovery" href="http://www.r-tt.com/">R-Tools Technology Inc.</a>
 </div>
 
 
