--- a/a/al/all/allcamp.com.html
+++ b/a/al/all/allcamp.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the allcamp.com privacy policy that was archived on 2013-08-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130823174213id_/http%3A//www.allcamp.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the allcamp.com privacy policy that was archived on 2014-02-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140222231038id_/http%3A//www.allcamp.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <title>Privacy Policy - Camping Directory</title>
@@ -39,8 +39,9 @@
         <div class="logo"><a href="http://www.allcamp.com/"><img src="http://www.allcamp.com/templates/Default/img/logo.gif" width="270" height="120" alt="" title=""></a></div>
         <!-- logo end -->
         <div class="slogan"><strong>AllCamp.com</strong> offers links to camping websites, browse for websites related to camping directory, campground, outdoor, campsite, summer camp, camping information and resources.</div>
-              </div>
-	<div style="float:left;position:absolute;left:392px;top:104px;width:150px;;font-weightold;color:#FFFFFF;font-family:Arial,Tahoma,Arial,sans-serif;font-size: 12px;"><strong>Since 2006</strong></div>
+   		<div class="created"><strong>Since 2006</strong></div>
+   </div>
+	
       <div class="top-menu">
         <ul class="menu">
           <li class="active"><a href="http://www.allcamp.com/" title="Home">Home</a></li>
