--- a/m/mi/mis/misvecinaslesbianas.com.html
+++ b/m/mi/mis/misvecinaslesbianas.com.html
@@ -1,12 +1,14 @@
-<!--The following is the downloaded HTML source of the misvecinaslesbianas.com privacy policy that was archived on 2013-10-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131019000228id_/http%3A//www.misvecinaslesbianas.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the misvecinaslesbianas.com privacy policy that was archived on 2014-02-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140223014201id_/http%3A//www.misvecinaslesbianas.com/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html><head><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script>
+<!DOCTYPE html><html><head>
+<script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"beacon":"beacon-2.newrelic.com","errorBeacon":"jserror.newrelic.com","licenseKey":"50913b7532","applicationID":"3031816","transactionName":"e1xWR0VXCF9WQhdGWF9WSxxHSg1FUlNB","queueTime":0,"applicationTime":31,"ttGuid":"","agentToken":null,"agent":"js-agent.newrelic.com/nr-323.min.js","extra":""}</script>
+<script type="text/javascript">window.NREUM||(NREUM={}),__nr_require=function a(b,c,d){function e(f){if(!c[f]){var g=c[f]={exports:{}};b[f][0].call(g.exports,function(a){var c=b[f][1][a];return e(c?c:a)},g,g.exports,a,b,c,d)}return c[f].exports}for(var f=0;f<d.length;f++)e(d[f]);return e}({"4O2Y62":[function(a,b){function c(a,b){var c=d[a];return c?c.apply(this,b):(e[a]||(e[a]=[]),void e[a].push(b))}var d={},e={};b.exports=c,c.queues=e,c.handlers=d},{}],handle:[function(a,b){b.exports=a("4O2Y62")},{}],YLUGVp:[function(a,b){function c(){var a=m.info=NREUM.info;if(a&&a.agent&&a.licenseKey&&a.applicationID){m.proto="https"===l.split(":")[0]||a.sslForHttp?"https://":"http://",g("mark",["onload",f()]);var b=i.createElement("script");b.src=m.proto+a.agent,i.body.appendChild(b)}}function d(){"complete"===i.readyState&&e()}function e(){g("mark",["domContent",f()])}function f(){return(new Date).getTime()}var g=a("handle"),h=window,i=h.document,j="addEventListener",k="attachEvent",l=(""+location).split("?")[0],m=b.exports={offset:f(),origin:l};i[j]?(i[j]("DOMContentLoaded",e,!1),h[j]("load",c,!1)):(i[k]("onreadystatechange",d),h[k]("onload",c)),g("mark",["firstbyte",f()])},{handle:"4O2Y62"}],loader:[function(a,b){b.exports=a("YLUGVp")},{}]},{},["YLUGVp"]);</script>
 <title>Mis Vecinas Lesbianas</title>
-<link href="/assets/site/naughtylesbiangirlfriends.com-2f9c86327ced19c24bd70f49f1ab1abc.css" media="all" rel="stylesheet">
-<script src="/assets/application-506731ff9eb188a8e174bf80512f7eb4.js"></script><style type="text/css">.dropdown-submenu:hover>.dropdown-menu{display:none}</style>
+<link href="/assets/site/naughtylesbiangirlfriends.com-84d0fc2df0ed57cc27ffccb92449bda0.css" media="all" rel="stylesheet">
+<script src="/assets/application-f974925e6adab249ab304e261bd9005e.js"></script><style type="text/css">.dropdown-submenu:hover>.dropdown-menu{display:none}</style>
 <meta content="authenticity_token" name="csrf-param">
-<meta content="quC1i+lEx4gp454JJyMDVU9ofSXD/5f/klHgjGxx1vA=" name="csrf-token">
+<meta content="w3WDtk6kUetK7+QNINdaAhsSjL4YJAMt7ljBji8YfG4=" name="csrf-token">
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <link rel="stylesheet" type="text/css" href="https://web.archive.org/assets/join.css"></head>
 <body class="static" style="">
@@ -66,10 +68,6 @@
 </a></li>
 </ul>
 </li>
-<form accept-charset="UTF-8" action="/search" class="navbar-form pull-left" method="get"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"></div>
-<input class="input" id="search" name="search" placeholder="Search" size="18" type="text">
-</form>
-
 
 </ul>
 <ul class="nav navbar-nav pull-right">
@@ -94,6 +92,7 @@
 <p>We may use the information collected to improve our marketing campaigns, contents and products. We may also send periodic information such as newsletters to our consenting users via email.</p>
 <p>We may disclose your information to affiliated sites and upon request of law enforcement agencies in order to enforce intellectual property or other rights. We may further disclose your personal information to any third party should there be a well founded accusation or suspicion you infringed the law through our services.</p>
 <p>If you want to update or delete your information from our database, please contact our Customer Service team at <a href="mailto:support@spanetworks.com">support@spanetworks.com</a>.</p>
+
 </div>
 
 <div class="footer">
@@ -106,7 +105,7 @@
 <li><a href="/help">Help</a></li>
 <li><a href="/terms">Terms</a></li>
 <li><a href="/privacy">Privacy</a></li>
-<li><a href="https://web.archive.org/web/20131103045159/http://www.spacash.com/?undefined" id="affiliateProgramLink">Affiliates</a></li>
+<li><a href="https://web.archive.org/web/20140530072503/http://www.spacash.com/?undefined" id="affiliateProgramLink">Affiliates</a></li>
 </ul>
 <p>
 <a href="/2257">18 USC 2257 Record-Keeping Requirements Compliance Statement</a>
@@ -137,27 +136,18 @@ Get immediate access to watch all movies.
 <script>
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-34873299-1']);
-  _gaq.push(['_setCustomVar', 1, 'Site', 'naughtylesbiangirlfriends.com']);
+  _gaq.push(['_setCustomVar', 1, 'ParentSite', 'naughtylesbiangirlfriends.com']);
+  _gaq.push(['_setCustomVar', 1, 'CurrentSite', 'misvecinaslesbianas.com']);
+  _gaq.push(['_setCustomVar', 1, 'CurrentHost', 'misvecinaslesbianas.com']);
   _gaq.push(['_trackPageview']);
   
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 </script>
 
-<script type="text/javascript">if (typeof NREUMQ !== "undefined") { if (!NREUMQ.f) { NREUMQ.f=function() {
-NREUMQ.push(["load",new Date().getTime()]);
-var e=document.createElement("script");
-e.type="text/javascript";
-e.src=(("http:"===document.location.protocol)?"http:":"https:") + "//" +
-  "js-agent.newrelic.com/nr-100.js";
-document.body.appendChild(e);
-if(NREUMQ.a)NREUMQ.a();
-};
-NREUMQ.a=window.onload;window.onload=NREUMQ.f;
-};
-NREUMQ.push(["nrfj","beacon-2.newrelic.com","7f63a8cd9f","2529479","Ig5WTUdXXVQAQx4TBAYESxZFSlhOBFJI",0,17,new Date().getTime(),"","","","",""]);}</script>
 
-<script type="text/javascript" src="https://js-agent.newrelic.com/nr-100.js"></script></body></html>
+
+<script src="https://js-agent.newrelic.com/nr-323.min.js"></script></body></html>
