--- a/x/xo/xot/xoticpc.com.html
+++ b/x/xo/xot/xoticpc.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the xoticpc.com privacy policy that was archived on 2013-12-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222110647id_/http%3A//www.xoticpc.com/privacy-policy-ip-21.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the xoticpc.com privacy policy that was archived on 2014-02-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140223033416id_/http%3A//www.xoticpc.com/privacy-policy-ip-21.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" dir="LTR" lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -90,15 +90,16 @@
 
 <form name="headerQForm" action="http://www.xoticpc.com/advanced_search_result.php" method="get">
 <!-- header //-->
-<table bgcolor="#646464" height="20" width="100%" cellpadding="0" cellspacing="0" border="0">
+<table bgcolor="#1C1C1C" height="25" width="100%" cellpadding="0" cellspacing="0" border="0">
 <tbody><tr>
 <td>
-<table align="center" width="990" height="30" cellpadding="0" cellspacing="0">
+<table align="center" width="990" height="25" cellpadding="0" cellspacing="0">
 <tbody><tr>
 <td align="left" valign="middle" width="450">
-<a href="http://www.xoticpc.com/cyberdecember.php"><img src="https://www.xoticpc.com/promotions/cyberdecember/cyber_december_header_link.png" width="241" height="28" border="0"></a>
+<font color="#FFFFFF" class="x2" style="font-size:16px">15th Anniversary:&nbsp;&nbsp;</font><a class="myHover x2" href="http://www.xoticpc.com/anniversary.php"><font style="font-size:16px">Sale</font></a><font color="#FFFFFF" class="x2" style="font-size:16px">&nbsp;&nbsp;|&nbsp;&nbsp;</font><a class="myHover x2" href="http://www.xoticpc.com/anniversarycontest.php"><font style="font-size:16px">Contest</font></a>
 </td>
-<td align="right" valign="middle" width="540"><font class="x4" color="#99CC00" style="font-size:16px">Need by Christmas?&nbsp;</font><a style="color:#9F0" href="http://www.xoticpc.com/bychristmasguarantee.php"><font class="x2" color="#99FF00" style="font-size:13px">click here</font></a></td>
+<td align="right" valign="middle" width="449">
+</td>
 </tr>
 </tbody></table>
 </td>
@@ -133,7 +134,7 @@
 <a target="_blank" href="https://twitter.com/xoticpc"><div class="twitter-hover social-slide"></div></a>
 <a target="_blank" href="http://www.youtube.com/user/xoticpc#p/u"><div class="youtube-hover social-slide"></div></a>
 <a target="_blank" href="https://plus.google.com/+xoticpc/posts"><div class="google-hover social-slide"></div></a>
-<a target="_blank" href="http://www.pinterest.com/xoticpc/"><div class="pinterest-hover social-slide"></div></a>
+<a target="_blank" href="http://instagram.com/xoticpc"><div class="instagram-hover social-slide"></div></a>
 </td>
 <td width="190" align="right">
 <div id="header-keywords-wrapper">
@@ -164,9 +165,8 @@
                 	<li><a href="http://www.xoticpc.com/custom-gaming-laptops-notebooks-asus-laptops-ct-95_51_163.html">ASUS</a></li>
                 	<li><a href="http://www.xoticpc.com/custom-gaming-laptops-notebooks-alienware-ct-95_51_402.html">ALIENWARE</a></li>
                 	<li><a href="http://www.xoticpc.com/custom-gaming-laptops-notebooks-clevo-sager-notebooks-ct-95_51_162.html">CLEVO / SAGER</a></li>
-                	<li><a href="http://www.xoticpc.com/custom-gaming-laptops-notebooks-compal-laptops-ct-95_51_173.html">COMPAL</a></li>
-                    <li><a href="http://www.xoticpc.com/custom-gaming-laptops-notebooks-gigabyte-laptops-ct-95_51_430.html">GIGABYTE <font color="#990000">(new)</font></a></li>
-                    <li><a href="http://www.xoticpc.com/custom-gaming-laptops-notebooks-lenovo-laptops-ct-95_51_427.html">LENOVO <font color="#990000">(new)</font></a></li>
+                    <li><a href="http://www.xoticpc.com/custom-gaming-laptops-notebooks-gigabyte-laptops-ct-95_51_430.html">GIGABYTE</a></li>
+                    <li><a href="http://www.xoticpc.com/custom-gaming-laptops-notebooks-lenovo-laptops-ct-95_51_427.html">LENOVO</a></li>
                 	<li><a href="http://www.xoticpc.com/custom-gaming-laptops-notebooks-msi-laptops-ct-95_51_165.html">MSI</a></li>
                     <li><a href="http://www.xoticpc.com/custom-gaming-laptops-notebooks-samsung-laptops-ct-95_51_415.html">SAMSUNG</a></li>
                 	<li><a href="http://www.xoticpc.com/custom-gaming-laptops-notebooks-xotic-force-series-ct-95_51_245.html">XOTIC PC FORCE</a></li>
@@ -197,7 +197,7 @@
                     <li><a href="http://www.xoticpc.com/custom-gaming-laptops-notebooks-touch-screen-laptops-ct-118_97_417.html">TOUCH SCREEN</a></li>
                     <li><a href="http://www.xoticpc.com/custom-gaming-laptops-notebooks-3d-capable-gmaing-laptops-ct-118_97_418.html">3D CAPABLE</a></li>
                     <li><a href="http://www.xoticpc.com/custom-gaming-laptops-notebooks-workstation-laptops-ct-118_97_426.html">WORKSTATIONS</a></li>
-                    <li><a href="http://www.xoticpc.com/custom-gaming-laptops-notebooks-tablets-ct-118_97_432.html">TABLETS <font color="#990000">(new)</font></a></li>
+                    <li><a href="http://www.xoticpc.com/custom-gaming-laptops-notebooks-tablets-ct-118_97_432.html">TABLETS</a></li>
                 </ul>
             </div>
             
@@ -553,7 +553,7 @@ contact us at</font><font color="#FF0000" class="x2" style="font-size:14px"> <a 
 <a target="_blank" href="https://twitter.com/xoticpc"><div class="twitter-hover social-slide"></div></a>
 <a target="_blank" href="http://www.youtube.com/user/xoticpc#p/u"><div class="youtube-hover social-slide"></div></a>
 <a target="_blank" href="https://plus.google.com/+xoticpc/posts"><div class="google-hover social-slide"></div></a>
-<a target="_blank" href="http://www.pinterest.com/xoticpc/"><div class="pinterest-hover social-slide"></div></a>
+<a target="_blank" href="http://instagram.com/xoticpc"><div class="instagram-hover social-slide"></div></a>
 </td>
 <td width="190" align="right" valign="middle">
 
@@ -682,7 +682,7 @@ contact us at</font><font color="#FF0000" class="x2" style="font-size:14px"> <a 
 <tbody><tr>
 <td width="670" align="left" valign="top">
 <a href="http://www.xoticpc.com/" class="myHover x4"><font style="font-size:12px">HOME</font></a><font class="x4" color="#FFFFFF" style="font-size:12px">&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</font><a href="http://www.xoticpc.com/about_xoticpc_new1.php" class="myHover x4"><font style="font-size:12px">ABOUT XOTIC PC</font></a><font class="x4" color="#FFFFFF" style="font-size:12px">&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</font><a href="http://www.xoticpc.com/xoticsupport_new1.php" class="myHover x4"><font style="font-size:12px">SUPPORT</font></a><font class="x4" color="#FFFFFF" style="font-size:12px">&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</font><a href="http://www.xoticpc.com/ourwarranty_new1.php" class="myHover x4"><font style="font-size:12px">WARRANTY</font></a><font class="x4" color="#FFFFFF" style="font-size:12px">&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</font><a href="http://www.xoticpc.com/xoticfaq_new1.php" class="myHover x4"><font style="font-size:12px">FAQ</font></a><font class="x4" color="#FFFFFF" style="font-size:12px">&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</font><a href="http://www.xoticpc.com/contact_xoticpc_new1.php" class="myHover x4"><font style="font-size:12px">CONTACT US</font></a><font class="x4" color="#FFFFFF" style="font-size:12px">&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</font><a href="http://www.xoticpc.com/privacy-policy-ip-21.html" class="myHover x4"><font style="font-size:12px">PRIVATE POLICY</font></a><br>
-<font class="x2" style="font-size:9px" color="#999999">Copyright © 1999-2013 XOTIC PC Inc. All Rights Reserved.</font></td>
+<font class="x2" style="font-size:9px" color="#999999">Copyright © 1999-2014 XOTIC PC Inc. All Rights Reserved.</font></td>
 <td width="138" align="left" valign="middle">
 
 </td>
